# yaveri

./: .gitignore  README.md  meson.build  meson_options.txt
src/: main.c  meson.build  veridator-lexer-main.l
src/cmdline/: cmdline.c  cmdline.h  meson.build  test-cmdline.c
src/lang/: meson.build  yaveri-lexer-main.l
src/parser/: meson.build  parser-private.h  parser.c  parser.h  reserved-words.h  test-parser.c  yaveri-lexer-main.l  yaveri-sv-lexer.l  yaveri-sv-parser.y
src/parser/test-files/: comment.sv  escape-identifier.sv  identifier.sv  meson.build  system_tf_call.sv
