pargs += ['-DCOMMENTS_TEST_FILE="@0@/test-files/@1@"'.format(parser_src_dir, 'comment.sv')]
pargs += ['-DESCAPE_IDENTIFIER_TEST_FILE="@0@/test-files/@1@"'.format(parser_src_dir, 'escape-identifier.sv')]
pargs += ['-DIDENTIFIER_TEST_FILE="@0@/test-files/@1@"'.format(parser_src_dir, 'identifier.sv')]
