pargs += [
  '-DCOMMENTS_TEST_FILE="@0@/test-files/@1@"'.format(parser_src_dir, 'comment.sv'),
  '-DESCAPE_IDENTIFIER_TEST_FILE="@0@/test-files/@1@"'.format(parser_src_dir, 'escape-identifier.sv'),
  '-DIDENTIFIER_TEST_FILE="@0@/test-files/@1@"'.format(parser_src_dir, 'identifier.sv'),
  '-DSYSTEM_TF_CALL_TEST_FILE="@0@/test-files/@1@"'.format(parser_src_dir, 'system_tf_call.sv'),
]
